# laptop-guard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: codecheck.yml  release.yml
src/: app.rs  app_config.rs  app_error.rs  cli.rs  error.rs  laptop_guarder.rs  logger.rs  main.rs  power_checker.rs  service_factory.rs  task_manager.rs  telegram_bot.rs  telegram_notifier.rs  validator.rs
