[package]
name = "laptop_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
battery = "0.7.8"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
regex = "1.11.1"
teloxide = { version = "0.13.0", features = ["macros", "throttle"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
ureq = "3.0.6"
urlencoding = "2.1.3"
